--- a/sources/Makefile
+++ b/sources/Makefile
@@ -1,3 +1,7 @@
+#-------------------------------------------------------------------------------
+# This file is part of Bombeirb.
+# Copyright (C) 2018 by Laurent Réveillère
+#-------------------------------------------------------------------------------
 SRCDIR = src
 BINDIR = bin
 OBJDIR = .obj
