--- a/sources/src/Makefile
+++ b/sources/src/Makefile
@@ -1,3 +1,7 @@
+#-------------------------------------------------------------------------------
+# This file is part of Bombeirb.
+# Copyright (C) 2018 by Laurent Réveillère
+#-------------------------------------------------------------------------------
 CC = gcc
 
 SDLCFLAGS = `sdl-config  --cflags`
